--- a/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -59,12 +59,8 @@
             <artifactId>com.springsource.org.apache.commons.lang</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-asl</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
 
         <!-- Test dependencies -->
