--- a/org.openwms.core/org.openwms.core.integration.hibernate/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.hibernate/pom.xml
@@ -46,12 +46,6 @@
         </resources>
     </build>
     <dependencies>
-        <!-- Spring Framework -->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
-
         <!-- JavaEE API -->
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
@@ -76,10 +70,14 @@
             <artifactId>ehcache</artifactId>
         </dependency>
 
-        <!-- 3rd party -->
+        <!-- Spring Framework -->
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-validator</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
         </dependency>
 
         <!-- TODO [scherrer] : Is this needed here? Test without -->
@@ -99,6 +97,12 @@
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
+        </dependency>
+
+        <!-- 3rd party -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
         </dependency>
 
         <!-- Project dependencies -->
