backend is solely running and ajs client too

--- a/org.openwms.core/org.openwms.core.client.rest/pom.xml
+++ b/org.openwms.core/org.openwms.core.client.rest/pom.xml
@@ -105,8 +105,8 @@
             <artifactId>dozer</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>com.springsource.org.apache.commons.httpclient</artifactId>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
         </dependency>
     </dependencies>
 
