--- a/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -56,7 +56,7 @@
         <!-- 3rd party -->
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>com.springsource.org.apache.commons.lang</artifactId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
