--- a/org.openwms.core/org.openwms.core.integration.file/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.file/pom.xml
@@ -53,6 +53,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-tx</artifactId>
         </dependency>
         <dependency>
@@ -67,11 +71,6 @@
         </dependency>
 
         <!-- 3rd party -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>com.springsource.org.apache.commons.lang</artifactId>
-        </dependency>
-
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
