--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 
     <issueManagement>
         <system>JIRA</system>
-        <url>https://openwms.atlassian.net/browsegit stat</url>
+        <url>https://openwms.atlassian.net/browse</url>
     </issueManagement>
 
     <licenses>
@@ -440,8 +440,8 @@
         <apache.commons.beanutils.version>1.8.0</apache.commons.beanutils.version>
         <apache.commons.collections.version>3.2.1</apache.commons.collections.version>
         <apache.commons.dbcp.version>1.2.2.osgi</apache.commons.dbcp.version>
-        <apache.commons.httpclient.version>3.1.0</apache.commons.httpclient.version>
-        <apache.commons.lang.version>2.5.0</apache.commons.lang.version>
+        <apache.commons.httpclient.version>4.4</apache.commons.httpclient.version>
+        <apache.commons.lang.version>3.1</apache.commons.lang.version>
         <apache.derby.version>10.7.1.1</apache.derby.version>
         <aspectj.version>1.7.4</aspectj.version>
         <dozer.version>5.4.0</dozer.version>
@@ -534,46 +534,12 @@
             <id>sonatype-public</id>
             <url>http://repository.sonatype.org/content/groups/flexgroup</url>
         </pluginRepository>
-        <!-- as3 commons repos -->
-        <pluginRepository>
-            <id>yoolab.org-releases</id>
-            <url>http://projects.yoolab.org/maven/content/repositories/releases</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>yoolab.org-snapshots</id>
-            <url>http://projects.yoolab.org/maven/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <!-- To resolve the bundlor plugin -->
-            <id>com.springsource.repository.bundles.release</id>
-            <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
-            <url>http://repository.springsource.com/maven/bundles/release</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
     </pluginRepositories>
     <repositories>
         <repository>
             <id>central</id>
             <name>Maven Plugin Repository</name>
-            <url>http://repo1.maven.org/maven2</url>
-            <layout>default</layout>
-            <releases>
-                <updatePolicy>never</updatePolicy>
-            </releases>
+            <url>http://repo.maven.apache.org/maven2</url>
         </repository>
         <repository>
             <id>com.springsource.repository.bundles.release</id>
@@ -594,27 +560,6 @@
             <id>com.springsource.repository.libraries.external</id>
             <name>SpringSource Enterprise Bundle Repository - External Library Releases</name>
             <url>http://repository.springsource.com/maven/libraries/external</url>
-        </repository>
-        <!-- as3 commons repos -->
-        <repository>
-            <id>yoolab.org-releases</id>
-            <url>http://projects.yoolab.org/maven/content/repositories/releases</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>yoolab.org-snapshots</id>
-            <url>http://projects.yoolab.org/maven/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </repository>
     </repositories>
 
@@ -1070,6 +1015,11 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${spring.version}</version>
             </dependency>
@@ -1177,19 +1127,13 @@
 
             <!-- Apache libraries -->
             <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>com.springsource.org.apache.commons.httpclient</artifactId>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
                 <version>${apache.commons.httpclient.version}</version>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.apache.commons</groupId>
-                        <artifactId>com.springsource.org.apache.commons.logging</artifactId>
-                    </exclusion>
-                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
-                <artifactId>com.springsource.org.apache.commons.lang</artifactId>
+                <artifactId>commons-lang3</artifactId>
                 <version>${apache.commons.lang.version}</version>
             </dependency>
             <dependency>
