--- a/org.openwms.common/org.openwms.common.comm/pom.xml
+++ b/org.openwms.common/org.openwms.common.comm/pom.xml
@@ -45,25 +45,15 @@
         <dependency>
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-ip</artifactId>
-            <version>${spring.integration.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.retry</groupId>
-                    <artifactId>spring-retry</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <!-- Unfortunately Spring integration depends on spring-retry that comes with an old Spring version 3.0.x -->
         <dependency>
             <groupId>org.springframework.retry</groupId>
             <artifactId>spring-retry</artifactId>
-            <version>1.0.2.RELEASE</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-context</artifactId>
-                </exclusion>
-            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
         </dependency>
 
         <!-- Project dependencies -->
