--- a/org.openwms.core/org.openwms.core.test/pom.xml
+++ b/org.openwms.core/org.openwms.core.test/pom.xml
@@ -51,15 +51,15 @@
         </plugins>
     </build>
     <dependencies>
-        <!-- 3rd party -->
+        <!-- JavaEE dependencies -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>  
+            <groupId>javax.transaction</groupId>
+            <artifactId>jta</artifactId>
             <scope>compile</scope>
         </dependency>
 
@@ -87,18 +87,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <scope>compile</scope>
-        </dependency>
-
-        <!-- JEE API -->
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.0-api</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>javax.transaction</groupId>
-            <artifactId>jta</artifactId>
             <scope>compile</scope>
         </dependency>
 
@@ -139,6 +127,17 @@
 
         <!-- Test database driver -->
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <scope>compile</scope>
@@ -167,7 +166,7 @@
 
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>com.springsource.org.apache.commons.dbcp</artifactId>
+            <artifactId>commons-dbcp2</artifactId>
             <scope>compile</scope>
         </dependency>
 
