Updated JDBS driver to latest 4.1 compliant version, because of DBCP2 update, removed some flex properties

--- a/org.openwms.core/org.openwms.core.infrastructure.postgres/pom.xml
+++ b/org.openwms.core/org.openwms.core.infrastructure.postgres/pom.xml
@@ -68,7 +68,7 @@
         <!-- Database libraries -->
         <dependency>
             <groupId>org.postgresql</groupId>
-            <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
+            <artifactId>postgresql</artifactId>
         </dependency>
 
         <!-- Project dependencies -->
