--- a/org.openwms.app/org.openwms.client.angularjs.wrapper/pom.xml
+++ b/org.openwms.app/org.openwms.client.angularjs.wrapper/pom.xml
@@ -94,7 +94,7 @@
         <!-- 3rd party libraries -->
         <dependency>
             <groupId>org.postgresql</groupId>
-            <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
+            <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
