--- a/pom.xml
+++ b/pom.xml
@@ -260,12 +260,6 @@
                     <name>!top</name>
                 </property>
             </activation>
-            <properties>
-                <!-- =================== -->
-                <!-- Client technology   -->
-                <!-- =================== -->
-                <angularjs>true</angularjs>
-            </properties>
             <modules>
                 <module>org.openwms.core</module>
                 <module>org.openwms.common</module>
@@ -320,6 +314,7 @@
                                 <link>http://dozer.sourceforge.net/apidocs</link>
                                 <link>http://jackson.codehaus.org/${jackson.version}/javadoc</link>
                             </links>
+                            <failOnError>false</failOnError>
                             <detectLinks>true</detectLinks>
                             <keywords>true</keywords>
                             <linksource>true</linksource>
@@ -343,6 +338,9 @@
         </profile>
         <profile>
             <id>release</id>
+            <properties>
+                <debug.info>false</debug.info>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
@@ -405,7 +403,8 @@
         <maven.compile.targetLevel>${jdkVersion}</maven.compile.targetLevel>
         <maven.compile.sourceLevel>${jdkVersion}</maven.compile.sourceLevel>
         <maven.min.version>3.0.4</maven.min.version>
-        
+        <debug.info>true</debug.info>
+
         <!-- Used to make the Maven description property available from Bundlor -->
         <project.description>${project.description}</project.description>
         
@@ -559,7 +558,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${plugin.compiler.version}</version>
                     <configuration>
-                        <debug>true</debug>
+                        <debug>${debug.info}</debug>
                         <optimize>true</optimize>
                         <fork>true</fork>
                         <source>${maven.compile.sourceLevel}</source>
