--- a/org.openwms.tms/org.openwms.tms.integration/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.integration/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<groupId>org.openwms</groupId>
 		<artifactId>org.openwms.tms</artifactId>
-		<version>1.0</version>
+		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.openwms.tms.integration</artifactId>
 	<name>${project.artifactId}</name>
