--- a/org.openwms.app/org.openwms.client.angularjs.app/pom.xml
+++ b/org.openwms.app/org.openwms.client.angularjs.app/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.app</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.client.angularjs.app</artifactId>
     <version>${angularjs.client.version}</version>
