--- a/org.openwms.app/org.openwms.client.rest.provider/pom.xml
+++ b/org.openwms.app/org.openwms.client.rest.provider/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.app</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.client.rest.provider</artifactId>
     <version>${rest.version}</version>
@@ -37,7 +37,6 @@
 
     <properties>
         <moduleDir>../../..</moduleDir>
-        <openwms.configuration.version>${core.version}</openwms.configuration.version>
     </properties>
     <build>
         <finalName>openwms-srv</finalName>
