--- a/org.openwms.app/pom.xml
+++ b/org.openwms.app/pom.xml
@@ -28,18 +28,18 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.app</artifactId>
-    <version>1.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>OpenWMS.org Application</name>
     <properties>
         <moduleDir>../..</moduleDir>
-        <core.version>1.0</core.version>
-        <common.version>1.0</common.version>
-        <tms.version>1.0</tms.version>
-        <wms.version>1.0</wms.version>
+        <core.version>${project.version}</core.version>
+        <common.version>${project.version}</common.version>
+        <tms.version>${project.version}</tms.version>
+        <wms.version>${project.version}</wms.version>
     </properties>
 
     <distributionManagement>
