--- a/org.openwms.common/org.openwms.common.service.api/pom.xml
+++ b/org.openwms.common/org.openwms.common.service.api/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.common</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.common.service.api</artifactId>
     <name>${project.artifactId}</name>
