--- a/org.openwms.common/pom.xml
+++ b/org.openwms.common/pom.xml
@@ -28,16 +28,16 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.common</artifactId>
-    <version>1.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>OpenWMS.org COMMON</name>
     <properties>
         <moduleDir>../..</moduleDir>
-        <core.version>1.0</core.version>
-        <module.version>1.0</module.version>
+        <core.version>${project.version}</core.version>
+        <module.version>${project.version}</module.version>
     </properties>
 
     <distributionManagement>
@@ -72,23 +72,6 @@
         </profile>
         <profile>
             <id>common</id>
-            <modules>
-                <module>org.openwms.common.comm</module>
-                <module>org.openwms.common.domain</module>
-                <module>org.openwms.common.integration</module>
-                <module>org.openwms.common.integration.jpa</module>
-                <module>org.openwms.common.service.api</module>
-                <module>org.openwms.common.service.spring</module>
-                <module>org.openwms.common.util</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>angularjs</id>
-            <activation>
-                <property>
-                    <name>angularjs</name>
-                </property>
-            </activation>
             <modules>
                 <module>org.openwms.common.comm</module>
                 <module>org.openwms.common.domain</module>
