--- a/org.openwms.core/org.openwms.core.client.rest/pom.xml
+++ b/org.openwms.core/org.openwms.core.client.rest/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.client.rest</artifactId>
     <version>${rest.version}</version>
@@ -36,7 +36,7 @@
     <description>CORE web controllers that provide RESTful access to the CORE resources and services.</description>
     <properties>
         <moduleDir>../..</moduleDir>
-        <core.version>1.0</core.version>
+        <core.version>${project.version}</core.version>
     </properties>
     <dependencies>
         <!-- JavaEE dependencies -->
