--- a/org.openwms.core/org.openwms.core.infrastructure.postgres/pom.xml
+++ b/org.openwms.core/org.openwms.core.infrastructure.postgres/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.infrastructure.postgres</artifactId>
     <packaging>jar</packaging>
@@ -36,16 +36,7 @@
     <description>Contains a Spring configuration to create a DataSource for PostgreSQL databases. This bundle is packaged with the main application.</description>
     <properties>
         <moduleDir>../..</moduleDir>
-        <openwms.configuration.version>1.0</openwms.configuration.version>
     </properties>
-    <build>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-    </build>
     <dependencies>
         <!-- JavaEE API -->
         <dependency>
