--- a/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.eclipselink/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.integration.eclipselink</artifactId>
     <packaging>jar</packaging>
