--- a/org.openwms.core/org.openwms.core.integration.file/pom.xml
+++ b/org.openwms.core/org.openwms.core.integration.file/pom.xml
@@ -28,23 +28,14 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.integration.file</artifactId>
     <name>${project.artifactId}</name>
     <description>Code that uses JAXB to read/write XML files.</description>
     <properties>
         <moduleDir>../..</moduleDir>
-        <openwms.configuration.version>1.0</openwms.configuration.version>
     </properties>
-    <build>
-        <resources>
-          <resource>
-            <directory>src/main/resources</directory>
-            <filtering>true</filtering>
-          </resource>
-        </resources>
-    </build>
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
