--- a/org.openwms.core/org.openwms.core.service.spring/pom.xml
+++ b/org.openwms.core/org.openwms.core.service.spring/pom.xml
@@ -28,14 +28,13 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.service.spring</artifactId>
     <name>${project.artifactId}</name>
     <description>Spring implementation of the service layer.</description>
     <properties>
         <moduleDir>.</moduleDir>
-        <openwms.configuration.version>1.0</openwms.configuration.version>
     </properties>
     <build>
         <resources>
