--- a/org.openwms.tms/org.openwms.tms.util/pom.xml
+++ b/org.openwms.tms/org.openwms.tms.util/pom.xml
@@ -28,22 +28,13 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.tms</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.tms.util</artifactId>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
-        <openwms.configuration.version>1.0</openwms.configuration.version>
     </properties>
-    <build>
-        <resources>
-          <resource>
-            <directory>src/main/resources</directory>
-            <filtering>true</filtering>
-          </resource>
-        </resources>
-    </build>
     <dependencies>
         <!-- Spring Framework -->
         <dependency>
