--- a/org.openwms.tms/pom.xml
+++ b/org.openwms.tms/pom.xml
@@ -28,17 +28,17 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms</artifactId>
-        <version>1.0</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.tms</artifactId>
-    <version>1.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>OpenWMS.org TMS</name>
     <properties>
         <moduleDir>../..</moduleDir>
-        <core.version>1.0</core.version>
-        <common.version>1.0</common.version>
-        <module.version>1.0</module.version>
+        <core.version>${project.version}</core.version>
+        <common.version>${project.version}</common.version>
+        <module.version>${project.version}</module.version>
     </properties>
 
     <distributionManagement>
@@ -72,23 +72,6 @@
         </profile>
         <profile>
             <id>tms</id>
-            <modules>
-                <module>org.openwms.tms.domain</module>
-                <module>org.openwms.tms.integration</module>
-                <module>org.openwms.tms.integration.jpa</module>
-                <module>org.openwms.tms.service.api</module>
-                <module>org.openwms.tms.service.spring</module>
-                <module>org.openwms.tms.util</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>angularjs</id>
-            <activation>
-                <property>
-                    <name>angularjs</name>
-                    <value>true</value>
-                </property>
-            </activation>
             <modules>
                 <module>org.openwms.tms.domain</module>
                 <module>org.openwms.tms.integration</module>
