removed cycle POM dependencies; removed separate REST client version

--- a/org.openwms.app/pom.xml
+++ b/org.openwms.app/pom.xml
@@ -88,7 +88,7 @@
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>org.openwms.client.rest.provider</artifactId>
-                <version>${rest.version}</version>
+                <version>${project.version}</version>
                 <type>war</type>
             </dependency>
         </dependencies>
