--- a/org.openwms.app/org.openwms.client.rest.provider/pom.xml
+++ b/org.openwms.app/org.openwms.client.rest.provider/pom.xml
@@ -31,7 +31,6 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.client.rest.provider</artifactId>
-    <version>${rest.version}</version>
     <packaging>war</packaging>
     <name>${project.artifactId}</name>
 
@@ -151,7 +150,7 @@
         <dependency>
             <groupId>org.openwms</groupId>
             <artifactId>org.openwms.core.client.rest</artifactId>
-            <version>${rest.version}</version>
+            <version>${core.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
