configured travis to build ajs

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: java
 jdk:
   - oraclejdk8
 node_js:
-  - 0.10
+  - '0.8'
+  - '0.10'
 before_script:
-  - npm install -g bower
-  - bower install
+  - 'npm install -g bower grunt-cli'
+  - 'bower install'
