- added support for Polymer - replaces some hardcoded urls with constants to be overridden by projects - CoreService now uses a `ResponsedataResolver` to translate server responses; added a default implementation - fixed layout issue on Login screen - removed duplicate header-view div

--- a/org.openwms.app/pom.xml
+++ b/org.openwms.app/pom.xml
@@ -74,7 +74,7 @@
                 </property>
             </activation>
             <modules>
-                <module>org.openwms.client.rest.provider</module>
+                <!--module>org.openwms.client.rest.provider</module-->
                 <module>org.openwms.client.angularjs.app</module>
                 <module>org.openwms.client.angularjs.wrapper</module>
             </modules>
